# oppertunity-party

./: .envrc  .gitignore  .markdown-link-check.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  DOLT_REMOTE.md  LICENSE  README.md  definitions.py  justfile  lefthook.yml  main.py  manifest  no.md  pyproject.toml  skills-lock.json
.dagster/: dagster.yaml
.github/: dependabot.yml
.github/workflows/: daily-publish.yml  daily-publish.yml.disabled
.obsidian/: workspace.json
data/blog/: 2025-07-20-the-opportunity-party-calls-for-bipartisanship-on-policy-costing-unit.md  2025-08-21-top-stories-citizen-voice-regulatory-standards-candidate-college.md  2025-08-26-statement-on-the-situation-in-gaza.md  2025-08-26-submission-on-the-electoral-amendment-bill.md  2025-12-21-on-the-hunt-for-new-zealands-north-star.md  2026-01-28-submission-on-the-education-and-training-system-reform-amendment-bill.md  2026-02-05-q-needs-you.md  2026-02-06-qs-reflections-from-waitangi.md  2026-03-02-submission-on-the-budget-policy-statement-2026.md  2026-03-03-call-for-government-reversal-on-lng-terminal.md  2026-03-03-statement-on-the-middle-east-crisis.md  2026-03-23-statement-on-the-fisheries-amendment-bill.md  2026-03-25-meet-the-first-opportunity-candidates.md  2026-04-09-free-public-transport.md  2026-05-04-submission-on-the-fisheries-amendment-bill.md  2026-05-17-accelerating-ev-uptake.md  2026-05-21-prosperity-doesnt-start-with-a-shredder.md  2026-05-27-left-right-politics-is-failing-new-zealand.md  2026-05-28-gene-technology-policy.md  2026-06-01-the-pray-and-delay-budget.md  index.json
data/clean/: _index.json  _pdf_validation.json
data/events/: 2026-06-08-volunteer-campaign-planning-tauranga.md  2026-06-09-meet-qiulae-wong-and-the-canterbury-candidates.md  2026-06-10-northcote-electorate-catch-up.md  2026-06-13-dunedin-cafe-tour.md  2026-06-13-meet-robert-mason.md  2026-06-13-policy-pints-with-kayla-kingdon-bebb.md  2026-06-13-westport-opportunity-pop-in-clinic.md  2026-06-14-coffee-with-your-candidate.md  2026-06-14-meet-qiulae-in-mt-albert.md  2026-06-14-opportunity-at-brewtown-market.md  2026-06-16-healthy-oceans-casual-forum.md  2026-06-17-nelson-meet-your-candidate.md  2026-06-20-dunedin-cafe-tour.md  2026-06-21-palmerston-north-meet-your-candidate.md  2026-06-27-dunedin-cafe-tour.md  2026-06-28-meet-ben-and-luke-candidates-for-hutt-south-and-remutaka.md  2026-06-28-opportunity-at-harbourside-market.md  index.json
data/news/: accelerating-ev-uptake.md  call-for-government-reversal-on-lng-terminal.md  free-public-transport.md  gene-technology-policy.md  index.json  left-right-politics-is-failing-new-zealand.md  meet-the-first-opportunity-candidates.md  on-the-hunt-for-new-zealands-north-star.md  prosperity-doesnt-start-with-a-shredder.md  q-needs-you.md  qs-reflections-from-waitangi.md  statement-on-the-fisheries-amendment-bill.md  statement-on-the-middle-east-crisis.md  statement-on-the-situation-in-gaza.md  submission-on-the-budget-policy-statement-2026.md  submission-on-the-education-and-training-system-reform-amendment-bill.md  submission-on-the-electoral-amendment-bill.md  submission-on-the-fisheries-amendment-bill.md  the-pray-and-delay-budget.md  the-state-of-the-nation.md
data/party-information/: about.md  charter.md  constitution.md  index.json  meet-q.md  party-information.md
data/pdfs/: reference.json
data/policies/: abundant-energy.md  affordable-housing.md  citizens-voice.md  clean-up-politics.md  climate-action.md  future-fit-education.md  healthy-land.md  healthy-oceans.md  healthy-people.md  honouring-te-tiriti.md  index.json  intergenerational-infrastructure.md  pdf-citizens-voice_policy-overview.md  pdf-index.json  pdf-tax-reset_policy-addendum.md  productivity-unleashed.md  smart-on-crime.md  tax-reset.md
data/policy-assets/: reference.json
data/team/: INDEX.md  adam-macrae-martin.md  adammacrae-martin.md  adrian-mee.md  adrianmee.md  almo-wong.md  almowong.md  ben-lane.md  ben-wylie-van-eerd.md  benlane.md  benwylie-van-eerd.md  bianca-beebe.md  biancabeebe.md  blair-smith.md  blairsmith.md  cail-smith.md  cailsmith.md  chee-khiang-cksng.md  chee-khiang-sng.md  cindie-uddstrom.md  cindieuddstrom.md  cody-marsh.md  codymarsh.md  daniel-eb.md  daniel-ebdeputy-leader.md  dave-bainbridge-zafar.md  davebainbridge-zafar.md  (+62 more)
docs/: data-architecture.md  data-schema.md  dependencies.md  ideas.md  mcp-design.md  media-downloader-spec.md  pdf-conversion-plan.md  pdf-download-plan.md  pdf-extraction.md  pdf-pipeline.md  static-site-generator.md  website-information.md  youtube-downloader-impl-plan.md
firecrawl/: .envrc  .gitignore  AGENTS.md  README.md  justfile  package.json  pnpm-lock.yaml
mcp/: README.md  evaluation.xml  repository.py  server.py
media/: __init__.py  platform.py  youtube.py
notes/: tax-policy.md
pipeline/: __init__.py  definitions.py  paths.py  text_clean.py
ralph/: .last-branch  prd.json  progress.txt  prompt.md
scraper/: blog_posts.py  cache.py  client.py  events.py  models.py  news.py  party_info.py  pdf_convert.py  pdf_convert_docling.py  pdf_download.py  policies.py  team.py
scripts/: Brewfile  check_docs_links.py  progress.txt  ralph.sh  setup.sh
site/: .env.example  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
tasks/: mcp-tool-spec.md  pdf-pipeline-hardening-handoff.md  pdf-policies-to-md.md  prd-dagster-etl-pipeline.md  prd-multi-source-data-structure.md
tests/: conftest.py  test_pdf_extraction.py  test_pdf_html.py  test_pdf_quirks.py
transforms/: __init__.py  blog.py  clean.py  events.py  main.py  party_info.py  policies.py  team.py
(+560 files in other folders)
