[project]
name = "opportunity-scraper"
version = "0.1.0"
description = "Scraper and MCP server for the Opportunity Party website"
# System dependency: brew install poppler  (provides pdftotext for PDF conversion)
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "mcp>=1.27.2",
]
