[project]
name = "opportunity-scraper"
version = "0.1.0"
description = "Scraper and MCP server for the Opportunity Party website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "gdown>=6.1.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "mcp>=1.27.2",
    "pymupdf4llm>=1.27.2.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking (moves TYPE_CHECKING imports)
    "ANN",  # flake8-annotations (require type hints)
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN401",  # use of Any is sometimes intentional
    "E501",    # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["ANN"]  # top-level runner; annotations not required here

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# ty — type checker
# ---------------------------------------------------------------------------
[tool.ty]
# All rules default to "error"; no downgrades — keep pre-commit strict.
