[project]
name = "opportunity-scraper"
version = "0.1.0"
description = "Scraper and MCP server for the Opportunity Party website"
readme = "README.md"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# Pinned: format-conversion deps.
#
# These three produce content that flows directly into data/clean/ and the
# rendered site. Their output shifts between versions (PDF→MD parsing,
# HTML→MD conversion, MD rendering), so we pin to exact versions and only
# bump when we deliberately re-scrape + re-build to absorb the change.
# Dependabot (see .github/dependabot.yml) batches them into a single
# "conversion-pinned" PR so the bump is a deliberate choice, not drift.
# ---------------------------------------------------------------------------
# Loose: orchestration, scraping, downloads, CLI, MCP. Rolled forward on an
# ongoing basis by dependabot. Ponytail: `>=` lets these roll forward
# without ceremony; pin when a specific release actually breaks something.
# ---------------------------------------------------------------------------
dependencies = [
    "pymupdf4llm==1.28.0",
    "markdown==3.10.2",
    "markdownify==1.2.3",

    "beautifulsoup4>=4.15.0",
    "dagster>=1.13.9",
    "dagster-dg-cli>=1.13.9",
    "dagster-webserver>=1.13.9",
    "gdown>=6.1.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "mcp>=1.27.2",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "__pycache__", ".agents"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking (moves TYPE_CHECKING imports)
    "ANN",  # flake8-annotations (require type hints)
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN401",  # use of Any is sometimes intentional
    "E501",    # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["ANN"]  # top-level runner; annotations not required here
"tests/**" = ["ANN"]  # test fixtures + parametrize don't benefit from full annotation
"pipeline/transforms/pdf_quirks.py" = ["RUF001"]  # curly quotes reproduce literal text from source PDFs
"tests/test_pdf_quirks.py" = ["RUF001"]  # mirrors pdf_quirks.py fixture text

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Dagster — code location discovery
# ---------------------------------------------------------------------------
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipeline"

[tool.dagster]
module_name = "pipeline.definitions"

# ---------------------------------------------------------------------------
# ty — type checker
# ---------------------------------------------------------------------------
[tool.ty]
# All rules default to "error"; no downgrades — keep pre-commit strict.
